--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,13 +61,13 @@ p {
     margin-left: 25px;
 }
 
-main {
+section {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-.benefits {
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
